--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:server": "json-server --watch db.json --port 3001"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
@@ -16,6 +17,7 @@
     "vite": "^2.7.2"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "navigo": "^8.11.1"
   }
 }
