--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "dependencies": {
     "axios": "^0.25.0",
     "express": "^4.17.2",
+    "jquery": "^3.6.0",
+    "jquery-validation": "^1.19.3",
     "json-server": "^0.17.0",
-    "navigo": "^8.11.1"
+    "navigo": "^8.11.1",
+    "toastr": "^2.1.4"
   }
 }
