--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "datatables.net": "^1.11.4",
+    "datatables.net-dt": "^1.11.4",
     "express": "^4.17.2",
     "jquery": "^3.6.0",
     "jquery-validation": "^1.19.3",
